--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,7 +26,7 @@
     </div>
     <div class="site-subtitle font-italic">{{ site.tagline }}</div>
     <a href="https://hits.seeyoufarm.com">
-      <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fchoi2021.github.io&count_bg=%23DBCECC&title_bg=%234CBFE1&icon=atom.svg&icon_color=%23FFFEFE&title=%EB%B0%A9%EB%AC%B8%EC%9E%90%EC%88%98&edge_flat=false"/>
+      <img alt="hit""" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fchoi2021.github.io&count_bg=%23DBCECC&title_bg=%234CBFE1&icon=atom.svg&icon_color=%23FFFEFE&title=%EB%B0%A9%EB%AC%B8%EC%9E%90%EC%88%98&edge_flat=false"/>
     </a>
   </div><!-- .profile-wrapper -->
    
